# SeniorDesign

./: .gitignore  .state_machine2.py.swp  README.md  RobotGpioInput  RobotGpioInput.cpp  brain.py  color.py  images.py  img_proc.py  motorControl.py  py_func.py  robot_gpio_input.py  state_machine.py  state_machine2.py  test.py  test_image.py  test_single.py  test_video.py
RobotC/: CMakeLists.txt  RTIMULib.ini  Robot  cRobot.cpp  combinedTest.cpp  gyroTest.cpp  linearTest.cpp  motorRPi.cpp
pythonStuff/: img_proc.py  robot_gpio_input.py  state_machine.py  state_machine2.py
